--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,5 +7,11 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="/main.bundle.js" defer></script> <!-- Main bundle for common React app -->
+    <script src="/admin.bundle.js" defer></script> <!-- Admin-specific bundle -->
+    <script src="/teacher.bundle.js" defer></script> <!-- Teacher-specific bundle -->
+    <script src="/student.bundle.js" defer></script> <!-- Student-specific bundle -->
+
+
   </body>
 </html>
